# Autocycler

./: .gitignore  CITATION.cff  Cargo.toml  README.md  autocycler-runner.py  autocycler.py  setup.py
Autocycler-Python/: autocycler-runner.py  endless_test.py  setup.py
Autocycler-Python/autocycler/: __main__.py  compress.py  decompress.py  help_formatter.py  kmer_graph.py  misc.py  position.py  repeat_resolution.py  resolve.py  unitig.py  unitig_graph.py  version.py
Autocycler-Python/test/: test_misc.py  test_reconstruction.py  test_unitig.py
Autocycler-Rust/: Cargo.toml
Autocycler-Rust/src/: cluster.rs  compress.rs  decompress.rs  graph_simplification.rs  kmer_graph.rs  log.rs  main.rs  misc.rs  position.rs  resolve.rs  sequence.rs  tests.rs  unitig.rs  unitig_graph.rs
autocycler/: __main__.py  decompress.py  error_correction.py  kmer_graph.py  misc.py  position.py  repeat_resolution.py  resolve.py  unitig.py  unitig_graph.py  version.py
docs/: README.md  build.sh  create_summary.py  fix_links_add_headers.py
pipelines/: README.md  autoautocycler.sh
pipelines/Auto-Autocycler_by_Tom_Stanton/: README.md  autoautocycler.sh
pipelines/Automated_Autocycler_Bash_script_by_Ryan_Wick/: README.md  autocycler_full.sh  autocycler_full_fast.sh
pipelines/Automated_fast_Autocycler_Bash_script_by_Ryan_Wick/: README.md
pipelines/Conda_environment_file_by_Ryan_Wick/: README.md  environment.yml
pipelines/Dockerfile_by_Ryan_Wick/: Dockerfile  README.md
pipelines/Dockerfile_by_Thomas_Roder/: Dockerfile  README.md  install_tools.sh
pipelines/Slurm_Autocycler_Bash_script_by_Michael_Hall/: README.md  autocycler_slurm.sh  environment.yaml
pipelines/autocycler_wrapper_by_iskold/: autocycler_wrapper.sh
scripts/: Dockerfile  README.md  autocycler_wrapper.sh  canu.sh  canu_trim.py  environment.yml  flye.sh  genome_size_raven.sh  lja.sh  metamdbg.sh  metamdbg_filter.py  miniasm.sh  necat.sh  nextdenovo.sh  plassembler.sh  raven.sh  redbean.sh
src/: clean.rs  cluster.rs  combine.rs  compress.rs  correct.rs  decompress.rs  dotplot.rs  gfa2fasta.rs  graph_simplification.rs  helper.rs  kmer_graph.rs  log.rs  main.rs  metrics.rs  misc.rs  position.rs  resolve.rs  sequence.rs  subsample.rs  table.rs  test_gfa.rs  tests.rs  trim.rs  trim_path_overlap.rs  unitig.rs  unitig_graph.rs
test/: test_misc.py  test_unitig.py
