[package]
name = "autocycler"
version = "0.0.0"
authors = ["Ryan Wick <rrwick@gmail.com>"]
edition = "2021"
description = "consensus bacterial genome assemblies"
homepage = "https://github.com/rrwick/Autocycler"
documentation = "https://github.com/rrwick/Autocycler/wiki"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
colored = "2.1"
flate2 = "1.0"
fxhash = "0.2"
indicatif = "0.17"
maplit = "1.0"
rand = "0.8"
regex = "1.10"
tempfile = "3.10"
term_size = "0.3"
textwrap = "0.16"
